@@ -5,6 +5,7 @@ CHANGES IN HTMLDOC v1.8.27
 
     BUG FIXES
 
+	- CMYK JPEG images caused HTMLDOC to crash (PR #6106)
 	- Table cell width calculations didn't always account for
 	  the proper minimum width (STR #121)
 	- Images were not copied when generating indexed HTML
